<resources>
    <string name="app_name">ThugLifeGame</string>
    <string name="user">Użytkownik</string>
    <string name="energy">Energia:</string>
    <string name="cash">Kasa:</string>
    <string name="level">Poziom:</string>
    <string name="shop">Sklep z bronią</string>
    <string name="bank">Bank</string>
    <string name="dealer">Diler</string>
    <string name="hospital">Szpital</string>
    <string name="quests">Misje</string>
    <string name="hookers">Dziwki</string>
    <string name="casino">Kasyno</string>
    <string name="prison">Więzienie</string>
    <string name="vip">VIP</string>
    <string name="saldo">Saldo:</string>
    <string name="high">Bania:</string>
    <string name="highscore">Ranking</string>
    <string name="achemement">Osiągnięcia</string>
    <string name="bankIntro">Tutaj możesz przetrzymywać swoją flote, aby jakieś społeczniaki Ci jej nie wykradły</string>
    <string name="deposit">Wpłać:</string>
    <string name="withdraw">Wypłać:</string>
    <string name="dice">Gra w kości</string>
    <string name="rulette">Ruletka</string>
    <string name="black_jack">Black Jack</string>
    <string name="prisonIntro">Siedzisz w pace ! Możesz poszmuglować z innymi cwelami lub spróbować uciec</string>
    <string name="prisonWelcome">Upuszczasz mydło!</string>
    <string name="escape">Ucieczka</string>
    <string name="dealerWelcome">Pssst... Młody, chcesz coś z \"pod lady\" ??</string>
    <string name="rank">Ranking</string>
    <string name="list">Lista</string>
    <string name="buy">Kup</string>
    <string name="whores">Twoje Lafiryndy</string>
    <string name="statistic">Statystyki</string>
    <string name="shopWelcome">Sklep z bronią</string>
    <string name="shopIntro">Elo młody, spraw sobie klamkę</string>
    <string name="questIntro">Możesz gromadzić hajs i doświadczenie poprzez branie udziału w różnych akcjach, ale pamiętaj zawsze możesz umoczyć dupe !</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="login1">Login</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="inteligence">Inteligencja:</string>
    <string name="agility">Zręczność:</string>
    <string name="respect">Respect:</string>
    <string name="throww">Rzut !</string>
    <string name="diceInfo">Zagraj z Wiesławem w kości. Masz 3 rzuty. Wpisowe to 1000$, jesli wygrasz zgarniasz 2x wiecej jesli przgrasz to i tak czeka Cię nagroda.... darmowy wpierdol !</string>
    <string name="success50">Szanasa powodzenia: 50%</string>
    <string name="success0">Szanasa powodzenia: 0%</string>
    <string name="level1">Wymagany Poziom: 1</string>
    <string name="level30">Wymagany Poziom: 30</string>
    <string name="mom">Okradnij Matke</string>
    <string name="dothis">Rozpocznij robotę !</string>
    <string name="profit">Możliwy zysk: 50$</string>
    <string name="profit100">Możliwy zysk: 10000$</string>
</resources>
