<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.StatisticActivity"
    android:background="@mipmap/statbg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statistic"
        android:id="@+id/tvStatistc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user"
        android:id="@+id/tvUsername"
        android:layout_below="@+id/tvStatistc"
        android:layout_toLeftOf="@+id/tvStatistc"
        android:layout_toStartOf="@+id/tvStatistc"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/level"
        android:id="@+id/tvLevel"
        android:layout_below="@+id/tvUsername"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_alignStart="@+id/tvUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Doświadczenie:"
        android:id="@+id/tvExpirence"
        android:layout_below="@+id/tvLevel"
        android:layout_alignLeft="@+id/tvLevel"
        android:layout_alignStart="@+id/tvLevel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Siła:"
        android:id="@+id/tvStrong"
        android:layout_below="@+id/tvExpirence"
        android:layout_alignLeft="@+id/tvExpirence"
        android:layout_alignStart="@+id/tvExpirence" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/inteligence"
        android:id="@+id/tvInteligence"
        android:layout_below="@+id/tvStrong"
        android:layout_alignLeft="@+id/tvStrong"
        android:layout_alignStart="@+id/tvStrong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/agility"
        android:id="@+id/tvAgility"
        android:layout_below="@+id/tvInteligence"
        android:layout_alignLeft="@+id/tvInteligence"
        android:layout_alignStart="@+id/tvInteligence" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/respect"
        android:id="@+id/tvRespect"
        android:layout_below="@+id/tvAgility"
        android:layout_alignLeft="@+id/tvAgility"
        android:layout_alignStart="@+id/tvAgility" />
</RelativeLayout>
