<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity"
    android:background="@mipmap/mainbg">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:hint="@string/login1"
        android:layout_above="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_above="@+id/bLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/etUsername"
        android:layout_alignEnd="@+id/etUsername" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/bLogin"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tvRegisterHere"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rejestracja"
        android:id="@+id/tvRegisterHere"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="190dp"
        android:id="@+id/ivLogo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
